methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: value update is not a member of Boolean
def haveBaggle():Boolean = {var vuBiscuit=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};avance()};for(i<-1 to 6) {recule()};
                                                                                       ^MethodsReturning:2: error: Boolean does not take parameters
                                                                  ;if (vuBiscuit()==true) {return true};else {return false}} 
                                                                                ^